discussion/kv_engine/167498/167498_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49977: Add configuration for auxio and nonio threads

The executor pool also contains a pool of threads for
auxio and nonio tasks. Allow them to be tuned through the
configuration file.

Change-Id: Iacdefbc56c0e2635c821e22f7508d52de0838609

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-12-13 15:37:21.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-12-13 15:44:48.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35950/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35950/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/memcached.cc:755:25:
error: too many arguments to function call, expected single argument "fn", have 2 arguments
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35950/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42402/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42402/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4194/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4194/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4136/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15294/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15294/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16428/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16428/ )

Compile error at [2021-12-13T15:44:21.735Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/daemon/memcached.cc:755:32:
error: no matching function for call to ?BucketManager::forEach(startExecutorPool()::<lambda(const string&, Settings&)>::<lambda(Bucket&, void*)>, std::nullptr_t)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16428/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14493/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/memcached.cc:755:25: error: too many arguments to function call, expected single argument "fn", have 2 arguments [clang-diagnostic-error]
                        nullptr);
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets.h:259:5: note: "forEach" declared here
    void forEach(std::function<bool(Bucket&)> fn);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/memcached.cc:766:25: error: too many arguments to function call, expected single argument "fn", have 2 arguments [clang-diagnostic-error]
                        nullptr);
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets.h:259:5: note: "forEach" declared here
    void forEach(std::function<bool(Bucket&)> fn);
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14493/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/memcached.cc:755:25:
error: too many arguments to function call, expected single argument "fn", have 2 arguments [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14493/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16133/ : FAILURE

Compile error at [2021-12-13T15:42:12.460Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/memcached.cc:755:32:
error: no matching function for call to ?BucketManager::forEach(startExecutorPool()::<lambda(const string&, Settings&)>::<lambda(Bucket&, void*)>, std::nullptr_t)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16133/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17197/ : FAILURE

Compile error at [2021-12-13T15:44:12.436Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/memcached.cc:755:25:
error: too many arguments to function call, expected single argument "fn", have 2 arguments
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17197/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24537/ : FAILURE

Compile error at [2021-12-13T15:43:40.261Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/memcached.cc:755:25:
error: too many arguments to function call, expected single argument "fn", have 2 arguments
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24537/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13323/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
